Fix S2A selected features count: 127 → ~250
The actual number varies by holdout scenario:
- Maize holdout: 268 features
- WTC11 holdout: 245 features
- S2_dev holdout: 242 features

--- a/paper/main.tex
+++ b/paper/main.tex
@@ -417,7 +417,7 @@ f_\theta(\phi) = \text{Linear}(\text{ReLU}(\text{BN}(\text{Linear}(\phi))))
 \item Select feature subset maximizing cross-validation performance on held-out source species folds
 \end{enumerate}
 
-The final \stwoa{} model uses 127 selected biophysical features (from 521 total), primarily DNA shape (MGW, ProT, Roll) and thermodynamic stability metrics. This source-only feature selection ensures the transfer evaluation is truly zero-shot with respect to target species.
+The final \stwoa{} model uses $\sim$250 selected biophysical features (from 521 total), primarily DNA shape (MGW, ProT, Roll) and thermodynamic stability metrics. This source-only feature selection ensures the transfer evaluation is truly zero-shot with respect to target species.
 
 \textbf{Domain adaptation.} To account for species-specific feature distributions, we apply simple standardization:
 \begin{equation}
